trunk/Archive2/ca/16ce1f04b393a7/output
main.cpp:2:18: error: expected initializer before '<' token
 constexpr auto pi<T> = T{3.14};
                  ^
main.cpp:2:31: warning: extra ';' [-Wpedantic]
 constexpr auto pi<T> = T{3.14};
                               ^
